Fix Firefox scrollbars and update README.md

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -9,3 +9,8 @@ body {
 *::-webkit-scrollbar {
     display: none;
 }
+
+.no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
